fixed layout margins not matching on mobile devices 4

--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -3,7 +3,7 @@
   background: #D9D9D9;
   display: flex;
   flex-direction: column;
-  position: fixed;
+  position: absolute;
   width: 100%;
   height: 100%;
 }
@@ -161,5 +161,13 @@
   .sign-in--btn>p {
     font-size: 12px;
   }
+}
+
+@media only screen and (max-height: 710px) {
+
+  #main {
+    min-height: 800px;
+  }
+
 
 }
